--- a/notebooks/Load and save to BIDs dataset.ipynb
+++ b/notebooks/Load and save to BIDs dataset.ipynb
@@ -19,13 +19,68 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to import duecredit due to No module named 'duecredit'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bids.grabbids import BIDSLayout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "layout = BIDSLayout('/data/sourcedata/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ExcitationRepetitionTime': 0.0062,\n",
+       " 'FlipAngle': 7,\n",
+       " 'InversionRepetitionTime': 5.5,\n",
+       " 'InversionTime': 2.7,\n",
+       " 'NumberShots': 159}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layout.get_metadata('/data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_inv-2_part-mag_MP2RAGE.nii')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sub-01_acq-MP2RAGE_T1map.nii\r\n",
+      "sub-01_acq-MP2RAGE_T1w.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-1_MP2RAGE.json\r\n",
       "sub-01_acq-MP2RAGE_inv-1_part-mag_MP2RAGE.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-1_part-phase_MP2RAGE.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-2_MP2RAGE.json\r\n",
+      "sub-01_acq-MP2RAGE_inv-2_part-mag_MP2RAGE.json\r\n",
       "sub-01_acq-MP2RAGE_inv-2_part-mag_MP2RAGE.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-2_part-phase_MP2RAGE.nii\r\n"
      ]
@@ -46,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +111,14 @@
       "{\n",
       "\t\"InversionTime\":0.8,\n",
       "\t\"FlipAngle\":5,\n",
-      "\t\"ReadoutRepetitionTime\":0.0062,\n",
+      "\t\"ExcitationRepetitionTime\":0.0062,\n",
       "\t\"InversionRepetitionTime\":5.5,\n",
       "\t\"NumberShots\":159\n",
       "}\n",
       "{\n",
       "\t\"InversionTime\":2.7,\n",
       "\t\"FlipAngle\":7,\n",
-      "\t\"ReadoutRepetitionTime\":0.0062,\n",
+      "\t\"ExcitationRepetitionTime\":0.0062,\n",
       "\t\"InversionRepetitionTime\":5.5,\n",
       "\t\"NumberShots\":159\n",
       "}\n"
@@ -86,10 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pymp2rage import MP2RAGE"
@@ -97,11 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found following files:\n",
+      " * inv1, magnitude: /data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_inv-1_part-mag_MP2RAGE.nii\n",
+      " * inv1, phase: /data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_inv-1_part-phase_MP2RAGE.nii\n",
+      " * inv2, magnitude: /data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_inv-2_part-mag_MP2RAGE.nii\n",
+      " * inv2, phase: /data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_inv-2_part-phase_MP2RAGE.nii\n"
+     ]
+    }
+   ],
    "source": [
     "mp2rage = MP2RAGE.from_bids(source_dir='/data/sourcedata/', subject='01')"
    ]
@@ -115,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +187,7 @@
        "[0.0062, 0.0062]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +207,7 @@
        "[0.8, 2.7]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +227,7 @@
        "159"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,15 +247,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing T1 map to /data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_T1map.nii\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/neuro/git/pymp2rage/pymp2rage/mp2rage.py:153: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/Users/gilles/git/pymp2rage/pymp2rage/mp2rage.py:175: RuntimeWarning: invalid value encountered in true_divide\n",
       "  self._t1w_uni = (np.real(compINV1*compINV2/(compINV1**2 + compINV2**2)))*4095+2048\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing bias-field corrected T1-weighted image to /data/sourcedata/sub-01/anat/sub-01_acq-MP2RAGE_T1w.nii\n"
      ]
     }
    ],
@@ -202,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +292,7 @@
       "sub-01_acq-MP2RAGE_inv-1_part-mag_MP2RAGE.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-1_part-phase_MP2RAGE.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-2_MP2RAGE.json\r\n",
+      "sub-01_acq-MP2RAGE_inv-2_part-mag_MP2RAGE.json\r\n",
       "sub-01_acq-MP2RAGE_inv-2_part-mag_MP2RAGE.nii\r\n",
       "sub-01_acq-MP2RAGE_inv-2_part-phase_MP2RAGE.nii\r\n"
      ]
@@ -233,42 +311,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘/tmp/test1’: File exists\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!mkdir /tmp/test1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mp2rage.write_files(path='/tmp/test1', prefix='test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_T1map.nii.gz  test_T1w.nii.gz\r\n"
+      "Writing T1 map to /tmp/test1/test_T1map.nii.gz\n",
+      "Writing bias-field corrected T1-weighted image to /tmp/test1/test_T1w.nii.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "mp2rage.write_files(path='/tmp/test1', prefix='test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_T1map.nii.gz test_T1w.nii.gz\r\n"
      ]
     }
    ],
@@ -302,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
